--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -56,7 +56,7 @@
   color: #f12c26;
 }
 
-.nav ul li::after {
+.nav ul li .link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -69,12 +69,12 @@
   transition: all 0.3s ease-in-out;
 }
 
-.nav ul li:nth-child(1):after {
+.nav ul li .link:hover::after {
   visibility: visible;
   width: 100%;
 }
 
-.nav ul li:hover::after {
+.nav ul li .active-link::after {
   visibility: visible;
   width: 100%;
 }
@@ -90,6 +90,15 @@
 }
 
 /* dropDown styling */
+.account-dropdown-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 .account-dropdown {
   background-color: #000000;
   padding: 1rem;
@@ -159,4 +168,15 @@
   top: 0;
   left: -1rem;
   opacity: 0.2;
+}
+
+@media (max-width: 693px) {
+  .nav ul {
+    gap: 1rem;
+    font-size: 14px;
+  }
+
+  .header .logo {
+    width: 80px;
+  }
 }
